feat: finished main objective of task